💄 design: 캐러셀 play&pause 버튼 구현 #19

--- a/client/src/components/Caroucel/slick-theme.css
+++ b/client/src/components/Caroucel/slick-theme.css
@@ -51,14 +51,14 @@
 	line-height: 1;
 
 	opacity: 0.75;
-	color: red;
+	color: black;
 
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
 
 .slick-prev {
-	/* left: -25px; */
+	left: -25px;
 }
 [dir='rtl'] .slick-prev {
 	right: -25px;
