✨ feat: 메인페이지 카드 캐러셀 구현 #110

--- a/client/src/components/Caroucel/slick-theme.css
+++ b/client/src/components/Caroucel/slick-theme.css
@@ -32,7 +32,7 @@
 .slick-next:focus {
 	color: red;
 	outline: none;
-	background: transparent;
+	/* background: transparent; */
 }
 .slick-prev:hover:before,
 .slick-prev:focus:before,
@@ -67,7 +67,7 @@
 	left: auto;
 }
 .slick-prev:before {
-	content: '←';
+	content: '';
 }
 [dir='rtl'] .slick-prev:before {
 	content: '→';
@@ -82,7 +82,7 @@
 	left: -25px;
 }
 .slick-next:before {
-	content: '→';
+	content: '';
 }
 [dir='rtl'] .slick-next:before {
 	content: '←';
